[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Backgrounds/Fons joc.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu_Minijocs.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[node name="Minijocs" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960.018, 540.015 )
texture = ExtResource( 1 )

[node name="PONG" type="Button" parent="."]
margin_left = 115.497
margin_top = 769.976
margin_right = 335.497
margin_bottom = 832.976
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "PONG"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joc_Disparar" type="Button" parent="."]
margin_left = 483.497
margin_top = 673.976
margin_right = 703.497
margin_bottom = 760.976
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "1 VS 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carrera" type="Button" parent="."]
margin_left = 851.513
margin_top = 547.963
margin_right = 1171.51
margin_bottom = 634.963
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "CARRERA"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animacio" type="Timer" parent="."]
one_shot = true

[node name="Menu" type="Button" parent="."]
margin_left = 1690.44
margin_top = 859.168
margin_right = 1878.44
margin_bottom = 946.168
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PONG" to="." method="_on_PONG_pressed"]
[connection signal="pressed" from="Joc_Disparar" to="." method="_on_Joc_Disparar_pressed"]
[connection signal="pressed" from="Carrera" to="." method="_on_Carrera_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
